--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: -webkit-center;
 }
 
 .App-logo {
@@ -28,11 +28,11 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.center-block {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+.p-center {
+  text-align: -webkit-center;
 }
